// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingPlaceholder matches snapshot when has custom sizes 1`] = `
@keyframes animation-0 {
  0% {
    background-position: -1200px 0;
  }

  100% {
    background-position: 1200px 0;
  }
}

.css-16lvo4x-LoadingPlaceholder__shimmer {
  position: relative;
  pointer-events: none;
}

.css-16lvo4x-LoadingPlaceholder__shimmer::after {
  content: ' ';
  position: absolute;
  z-index: 9;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background: #eaeff4;
  border-radius: 5px;
  overflow: hidden;
  background: linear-gradient(to right,#eaeff4 8%,#f8f9fa 18%,#eaeff4 33% );
  background-size: 1200px 100%;
  -webkit-animation: animation-0 2s forwards infinite linear;
  animation: animation-0 2s forwards infinite linear;
}

<div
  className="css-16lvo4x-LoadingPlaceholder__shimmer"
  style={
    Object {
      "height": 200,
      "width": 100,
    }
  }
/>
`;

exports[`LoadingPlaceholder matches snapshot when has no specified sizes 1`] = `
@keyframes animation-0 {
  0% {
    background-position: -1200px 0;
  }

  100% {
    background-position: 1200px 0;
  }
}

.css-16lvo4x-LoadingPlaceholder__shimmer {
  position: relative;
  pointer-events: none;
}

.css-16lvo4x-LoadingPlaceholder__shimmer::after {
  content: ' ';
  position: absolute;
  z-index: 9;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  background: #eaeff4;
  border-radius: 5px;
  overflow: hidden;
  background: linear-gradient(to right,#eaeff4 8%,#f8f9fa 18%,#eaeff4 33% );
  background-size: 1200px 100%;
  -webkit-animation: animation-0 2s forwards infinite linear;
  animation: animation-0 2s forwards infinite linear;
}

<div
  className="css-16lvo4x-LoadingPlaceholder__shimmer"
  style={
    Object {
      "height": "24px",
      "width": 200,
    }
  }
/>
`;
